--- a/privacy.html
+++ b/privacy.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/app_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Tiny Habits - A minimalist habit-building tool based on micro-habits method + AI coach" />
-    <title>Tiny Habits · Build Habits Easier</title>
+    <meta name="description" content="Tiny Habits - Privacy Policy" />
+    <title>Privacy Policy - Tiny Habits</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/privacy.jsx"></script>
   </body>
 </html>
 
