--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/app_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/app_icon.png" as="image" />
+    <link rel="dns-prefetch" href="https://images.unsplash.com" />
+    <link rel="dns-prefetch" href="https://plus.unsplash.com" />
     
     <!-- Primary Meta Tags -->
     <title>Tiny Habits - Habit Tracker & Time Management App | Build Better Habits</title>
