--- a/detail.html
+++ b/detail.html
@@ -694,7 +694,120 @@
         }
 
         // ----------------- Calendar -----------------
-        // ... (renderCalendar omitted for brevity as it is unchanged) ...
+        function renderCalendar() {
+            const year = currentDate.getFullYear();
+            const month = currentDate.getMonth();
+            document.getElementById('currentMonthYear').textContent = `${year}年${month + 1}月`;
+
+            const firstDay = new Date(year, month, 1).getDay();
+            const lastDate = new Date(year, month + 1, 0).getDate();
+            const container = document.getElementById('calendarDays');
+            container.innerHTML = "";
+
+            for (let i = 0; i < firstDay; i++) {
+                container.appendChild(createDiv('day'));
+            }
+
+            const todayStr = formatDate(new Date());
+            const monthStart = new Date(year, month, 1);
+            const monthEnd = new Date(year, month + 1, 0);
+
+            // Prediction sets
+            let predictedDates = new Set();
+            let ovulationDates = new Set();
+            let peakOvulationDates = new Set();
+
+            if (lastPeriodStart && config.cycleLen > 0) {
+                // Calculate future periods relative to lastPeriodStart
+                // Iterate forward from lastPeriodStart until we pass this month
+                let nextStart = new Date(lastPeriodStart.getTime());
+                // Move to near current month
+                while (nextStart < monthEnd) {
+                    // Check if this period cycle falls in current month
+                    // Period Range: nextStart to nextStart + periodLen
+                    // Ovulation: nextStart + cycleLen - 14
+
+                    // Next Cycle Start (Hypothetical next)
+                    let cycleNext = addDays(nextStart, config.cycleLen);
+
+                    // If nextStart is in the past compared to lastPeriodStart, it's actual data (should be), 
+                    // but we use lastPeriodStart as the anchor of known truth.
+                    // IMPORTANT: We only predict FUTURE from lastPeriodStart
+                    if (nextStart > lastPeriodStart) {
+                        // Add predicted period days
+                        for (let d = 0; d < config.periodLen; d++) {
+                            const pDate = addDays(nextStart, d);
+                            if (pDate >= monthStart && pDate <= monthEnd) {
+                                predictedDates.add(formatDate(pDate));
+                            }
+                        }
+                    }
+
+                    // Ovulation for the cycle ending at cycleNext
+                    // Ovulation is roughly 14 days before NEXT period
+                    const ovDay = addDays(cycleNext, -14);
+                    if (ovDay >= monthStart && ovDay <= monthEnd) {
+                        // Peak Ovulation Day
+                        peakOvulationDates.add(formatDate(ovDay));
+
+                        // Ovulation Window: 5 days ending on ovulation day (inclusive)
+                        for (let w = -4; w <= 0; w++) {
+                            const fDate = addDays(ovDay, w);
+                            if (fDate >= monthStart && fDate <= monthEnd) {
+                                ovulationDates.add(formatDate(fDate));
+                            }
+                        }
+                    }
+
+                    nextStart = cycleNext;
+                }
+            }
+
+            for (let i = 1; i <= lastDate; i++) {
+                const date = new Date(year, month, i);
+                const dateStr = formatDate(date);
+                const el = createDiv('day');
+                el.textContent = i;
+                el.style.cursor = 'pointer';
+                el.onclick = () => openDetails(dateStr);
+
+                if (dateStr === todayStr) el.classList.add('today');
+
+                const log = periodLogs.find(l => formatDate(new Date(l.createTime)) === dateStr);
+
+                // Priority: Actual Log > Ovulation > Predicted
+                if (log) {
+                    el.classList.add('period');
+                    el.classList.add('period-single');
+                    if (log.signUpId) {
+                        try {
+                            const details = JSON.parse(log.signUpId);
+                            if (details.mood) {
+                                const dot = createDiv('item-dot dot-mood');
+                                el.appendChild(dot);
+                            }
+                        } catch (e) { }
+                    }
+                } else if (peakOvulationDates.has(dateStr)) {
+                    el.classList.add('ovulation-day');
+                } else if (ovulationDates.has(dateStr)) {
+                    el.classList.add('ovulation-window');
+                } else if (predictedDates.has(dateStr)) {
+                    el.classList.add('predicted-period');
+                }
+
+                container.appendChild(el);
+            }
+        }
+
+        function createDiv(cls) {
+            const d = document.createElement('div');
+            d.className = cls;
+            return d;
+        }
+
+        function prevMonth() { currentDate.setMonth(currentDate.getMonth() - 1); renderCalendar(); fetchData(); }
+        function nextMonth() { currentDate.setMonth(currentDate.getMonth() + 1); renderCalendar(); fetchData(); }
 
         // ----------------- Modals & Logic -----------------
 
